升级项目至 .NET Core 3.1

--- a/NFine.Web/appsettings.json
+++ b/NFine.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-    "connectionStrings": {
-        "NFineDbContext": "Data Source=172.31.2.109;Initial Catalog=NFine_Code;User ID=sa;Password=123456"
+    "ConnectionStrings": {
+        "NFineDbContext": "Data Source=211.85.182.218;Initial Catalog=NFine_Code;User ID=sa;Password=sa1994sa"
     },
     "appSettings": {
         "LoginProvider": "Session", //登陆提供者模式：Session、Cookie
