--- a/NFine.Scheduler/NFine.Scheduler.csproj
+++ b/NFine.Scheduler/NFine.Scheduler.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,23 +18,18 @@
     </Content>
   </ItemGroup>
 
-
   <ItemGroup>
     <PackageReference Include="CrystalQuartz.AspNetCore" Version="6.8.1" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="NLog" Version="4.6.3" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.2" />
-    <PackageReference Include="Quartz.Plugins" Version="3.0.7" />
-    <PackageReference Include="Quartz.Serialization.Json" Version="3.0.7" />
+    <PackageReference Include="NLog" Version="4.7.12" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+    <PackageReference Include="Quartz.Plugins" Version="3.3.3" />
+    <PackageReference Include="Quartz.Serialization.Json" Version="3.3.3" />
   </ItemGroup>
-
 
   <ItemGroup>
     <ProjectReference Include="..\NFine.Application\NFine.Application.csproj" />
     <ProjectReference Include="..\NFine.Core\NFine.Code.csproj" />
   </ItemGroup>
-
 
   <ItemGroup>
     <Content Update="appsettings.Development.json">
