--- a/NFine.Web/appsettings.Development.json
+++ b/NFine.Web/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
-    "connectionStrings": {
-        "NFineDbContext": "Data Source=172.31.2.109;Initial Catalog=NFine_Code;User ID=sa;Password=123456",
-        "NFLogDbString": "Data Source=172.31.2.109;Initial Catalog=NFine_Code_Log;User ID=sa;Password=123456"
+    "ConnectionStrings": {
+        "NFineDbContext": "Data Source=211.85.182.218;Initial Catalog=NFine_Code;User ID=sa;Password=sa1994sa",
+        "NFLogDbString": "Data Source=211.85.182.218;Initial Catalog=NFine_Code_Log;User ID=sa;Password=sa1994sa"
     },
     "appSettings": {
         "LoginProvider": "Cookie", //登陆提供者模式：Session、Cookie
